# blockchain-simulation

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md
blockchain/: Cargo.toml
blockchain/src/: account.rs  block.rs  blockchain.rs  consensus.rs  extrinsics.rs  main.rs  plugin.rs  state.rs  stf.rs  types.rs
common/: Cargo.toml
common/src/: account.rs  block.rs  extrinsics.rs  lib.rs  types.rs
main/: Cargo.toml
main/src/: main.rs
node/: Cargo.toml
node/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  plugin.rs  stf.rs
