[package]
name = "blockchain-simulation"
version = "0.1.0"
edition = "2021"

# Specify binary target
[[bin]]
name = "blockchain"
path = "blockchain/src/main.rs"

[workspace]
members = [
    "blockchain",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3"
