[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3"
blake2 = "0.10.3"
lazy_static = "1.5.0"
hex = "0.4"
rand = "0.8.4"
thiserror = "1.0.24"