[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_derive = { workspace = true }
bincode = { workspace = true }
blake2 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }